deploy/components/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  creationTimestamp: null
  name: quarkus-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: quarkus.cluster.koalaops.com
    http:
      paths:
      - backend:
          service:
            name: quarkus-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - quarkus.cluster.koalaops.com
    secretName: quarkus-tls-cert
status:
  loadBalancer: {}
